--- a/src/components/MainContainer.module.css
+++ b/src/components/MainContainer.module.css
@@ -145,7 +145,7 @@
 @media (prefers-color-scheme: dark)
 {
   .main_background{
-    background-image: url("/background.png");
+    background-image: url("/background-dark.png");
   }
 }
 
